# greate-meme-site

client/: .env  package-lock.json
client/src/: App.tsx
client/src/api/: api.ts
client/src/components/: ExpandableText.tsx  FeedPage.tsx  PostCard.tsx
server/: .gitignore  pyproject.toml
server/src/: main.py
server/src/api/v1/: __init__.py
server/src/api/v1/auth/: dependencies.py  endpoints.py  schemas.py  service.py
server/src/api/v1/health/: endpoints.py  schemas.py
server/src/api/v1/user/: endpoints.py  repository.py  schemas.py  service.py
server/src/api/v1/vk/: endpoints.py  schemas.py  service.py
server/src/core/: config.py  database.py  exception_handlers.py  exceptions.py  logger.py  models.py  repository.py  security.py  setup.py  utilities.py
server/src/migrations/: env.py
server/src/models/: __init__.py  user.py
